# hexo-ai

./: .gitignore  README.md  RESEARCH_LOG.md  pyproject.toml
artifacts/: README.md  big_model_r399.pt  endgame_best_iter07.pt  mcts_vs_minimax_games.json  minimax_games_iter0.json  small_model_r19.pt
hexo/: config.py
hexo/encoding/: heuristic.py  planes.py  symmetry.py
hexo/eval/: arena.py  benchmark.py  cross_eval.py
hexo/game/: constants.py  state.py
hexo/mcts/: noise.py  puct.py  search.py  tree.py
hexo/model/: blocks.py  heads.py  resnet.py
hexo/training/: checkpoint.py  dataset.py  pipeline.py  self_play.py  trainer.py
scripts/: distill_from_minimax.py  endgame_curriculum.py  endgame_training.py  train.py  train_progressive.py
tests/: conftest.py  test_encoding.py  test_game_state.py  test_heuristic.py  test_integration.py  test_mcts.py  test_model.py  test_symmetry.py  test_training.py
